refactor: call head_meta_tags explicitely on root pages that layout can be reactified

--- a/app/views/media_entries/permissions_edit.html.haml
+++ b/app/views/media_entries/permissions_edit.html.haml
@@ -1,2 +1,5 @@
+:ruby
+  render('media_entries/_show/head_meta_tags')
+
 -# No static fallback, but pre-renders form
 = render template: 'media_entries/permissions'
