--- a/app/views/media_entries/relation_siblings.html.haml
+++ b/app/views/media_entries/relation_siblings.html.haml
@@ -1,3 +1,6 @@
+:ruby
+  render('media_entries/_show/head_meta_tags')
+
 - content_for(:title_head) { @get.title }
 
 = render template: 'media_entries/_show/_base_tmp_react'
