--- a/app/assets/stylesheets/_tachyons.scss
+++ b/app/assets/stylesheets/_tachyons.scss
@@ -71,7 +71,7 @@
 /*@import '../../../../node_modules/tachyons/src/_text-align';*/
 /*@import '../../../../node_modules/tachyons/src/_text-transform';*/
 /*@import '../../../../node_modules/tachyons/src/_type-scale';*/
-/*@import '../../../../node_modules/tachyons/src/_typography';*/
+@import '../../../../node_modules/tachyons/src/_typography';
 /*@import '../../../../node_modules/tachyons/src/_utilities';*/
 /*@import '../../../../node_modules/tachyons/src/_visibility';*/
 /*@import '../../../../node_modules/tachyons/src/_white-space';*/
