fix: ui: MetaDatumText: more line length

--- a/app/assets/stylesheets/_tachyons.scss
+++ b/app/assets/stylesheets/_tachyons.scss
@@ -71,7 +71,10 @@
 /*@import '../../../../node_modules/tachyons/src/_text-align';*/
 /*@import '../../../../node_modules/tachyons/src/_text-transform';*/
 /*@import '../../../../node_modules/tachyons/src/_type-scale';*/
+
 @import '../../../../node_modules/tachyons/src/_typography';
+.measure-double { max-width: 60em }
+
 /*@import '../../../../node_modules/tachyons/src/_utilities';*/
 /*@import '../../../../node_modules/tachyons/src/_visibility';*/
 /*@import '../../../../node_modules/tachyons/src/_white-space';*/
