--- a/app/views/styleguide/06_Icons/_4_icon-other.html.haml
+++ b/app/views/styleguide/06_Icons/_4_icon-other.html.haml
@@ -18,7 +18,8 @@
     'media-entry', 'tag', 'tags', 'trash', 'user', 'add-user', 'add-group',
     'admin', 'home', 'power-off', 'lens', 'magnifier', 'highlight', 'star',
     'clipboard', 'question-mark', 'question', 'bang', 'close', 'copy',
-    'contrast', 'undo', 'catalog', 'link', 'api', 'library'
+    'contrast', 'undo', 'catalog', 'link', 'api', 'library',
+    'checkbox', 'checkbox-mixed', 'checkbox-active'
   ]
 
 = render_partial('element', element) do
