chore: assets: better icon font embed

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,6 +1,5 @@
-
 // custom icon font from own assets
-@import "../fonts/madek-icon-font/style";
+@import "icons";
 
 // font awesome icon font
 @font-face {
