--- a/app/views/my/dashboard.haml
+++ b/app/views/my/dashboard.haml
@@ -1,3 +1,9 @@
+:ruby
+  visible_sections = @sections.reject do |section_id, section|
+    section[:hide_from_index] === true
+  end
+
+
 -# template for the main dashboard (#index-ish)
 - content_for(:title_head) do
   = t(:dashboard_title_head)
@@ -8,9 +14,7 @@
 - content_for(:page_content) do
   - dashboard_content = capture_haml do
     -# each section: build a title and render the partial
-    - @sections.each do |section_id, section|
-      -# don't show sections on dashboard root if configured
-      - next if section[:hide_from_index] === true
+    - visible_sections.each_with_index do |(section_id, section), index|
 
       %div{id: section_id}
         = combo('resources-header', title: section[:title],
@@ -19,6 +23,9 @@
         - if section[:partial].present?
           = render partial: "my/section_#{section[:partial]}",
                    locals: { get: @get, section: section, show_pagination_nav: false }
+
+      - if index < visible_sections.length - 1
+        %hr.separator.mbm
 
   .ui-container.pal
     - if dashboard_content
