feature: permissions filters

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -76,3 +76,28 @@
 
 .ui-autocomplete-position-relative
   position: relative !important
+
+.ui-autocomplete-top-margin-2
+  margin-top: 3px !important
+
+.ui-autocomplete-override-sidebar
+  border-radius: 0px !important
+  clear: both !important
+  color: #333333 !important
+  border-bottom: 1px solid $mono-bright !important
+  display: block !important
+  font-weight: normal !important
+  line-height: 20px !important
+  padding: 3px 20px !important
+  overflow: hidden !important
+  text-overflow: ellipsis !important
+  white-space: nowrap !important
+
+
+.ui-autocomplete-override-sidebar:hover
+  background-color: #0081C2 !important
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3) !important
+  background-repeat: repeat-x !important
+  color: #FFFFFF !important
+  outline: 0 none !important
+  text-decoration: none !important
