--- a/app/assets/stylesheets/_tachyons.scss
+++ b/app/assets/stylesheets/_tachyons.scss
@@ -70,7 +70,7 @@
 /*@import '../../../../node_modules/tachyons/src/_text-decoration';*/
 /*@import '../../../../node_modules/tachyons/src/_text-align';*/
 /*@import '../../../../node_modules/tachyons/src/_text-transform';*/
-/*@import '../../../../node_modules/tachyons/src/_type-scale';*/
+@import '../../../../node_modules/tachyons/src/_type-scale';
 
 @import '../../../../node_modules/tachyons/src/_typography';
 .measure-double { max-width: 60em }
