--- a/app/views/my/_sidebar.html.haml
+++ b/app/views/my/_sidebar.html.haml
@@ -1,3 +1,6 @@
+:ruby
+  show_beta = false
+
 %ul.ui-side-navigation
   -# each section: make a menu entry and set it active it is.
   - @sections.each do |section_id, section|
@@ -6,7 +9,7 @@
     %li.ui-side-navigation-item{class: link_active?(link) ? 'active' : nil}
 
       %a.strong{href: link}
-        - if section[:is_beta]
+        - if section[:is_beta] && show_beta
           %em{style: 'font-style: italic; font-weight: normal;'}
             = 'Beta:'
 
