feat: browse similar entries ("Stöbern")
- new design/layout
- remove "beta feature" restrictions

--- a/app/assets/stylesheets/components/_ui-tag-cloud.sass
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.sass
@@ -84,7 +84,8 @@
 
 // Modifiers
 
-.ui-tag-cloud.small
+.ui-tag-cloud.small,
+.ui-tag-cloud-small
   .ui-tag-button
     font-size: $font-xs
     line-height: 19px
