--- a/app/views/my/_section_activity_stream.html.erb
+++ b/app/views/my/_section_activity_stream.html.erb
@@ -1,3 +1,3 @@
 <%=
-react('Views.My.ActivityStream', get: @get.send(section[:id]))
+react('Views.My.ActivityStream', get: @get.section_resources)
 %>
