--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -1,10 +1,10 @@
 :ruby
-  keywords = get.used_keywords.map do |keyword|
+  keywords = @get.section_resources.map do |keyword|
     { text: keyword.label, link: keyword.url, count: keyword.usage_count }
   end
 - keywords_content = if keywords.empty? then t(:no_keywords_fallback) else combo('tag-cloud.label', list: keywords) end
 
-- if get.action == 'dashboard_section'
+- if params[:action] == 'dashboard_section'
   .ui-container.pal
     = keywords_content
 - else
