--- a/app/views/my/groups/edit.html.haml
+++ b/app/views/my/groups/edit.html.haml
@@ -2,7 +2,7 @@
   content_for(:page_header) do
     component('page-header',
               icon: component('icon.privacy-group'),
-              text: (t(:group_edit_form_title_pre, raise: false) + @get.name),
+              text: (t(:group_edit_form_title_pre, raise: false) + @get.section_resources.name),
               actions: [
                 component('button.primary', link: new_my_group_path,
                                             text: t(:group_new_group_btn))
@@ -14,4 +14,4 @@
 
 - content_for(:page_content) do
   .ui-container.mam.pam.bright.bordered.rounded-bottom.rounded-right
-    = react('Views.GroupSearch', { get: @get })
+    = react('Views.GroupSearch', { get: @get.section_resources })
