feature: support batch edit for whole sets

--- a/app/views/my/_section_media_resources_sync.html.erb
+++ b/app/views/my/_section_media_resources_sync.html.erb
@@ -11,7 +11,7 @@ mods = ['rounded-right', { bordered: false }]
 fallback = section[:is_empty?] ? true : false
 
 react(ui_component,
-    get: @get.section_resources,
+    get: @get.section_content,
     mods: mods,
     withBox: with_box,
     fallback: fallback,
