--- a/app/views/media_entries/batch_edit_meta_data_by_vocabularies.html.haml
+++ b/app/views/media_entries/batch_edit_meta_data_by_vocabularies.html.haml
@@ -1,1 +1,1 @@
-= react('Deco.ResourceMetaDataPagePerContext', {get: @get, batch: true, batchType: 'MediaEntry'})
+= react('Deco.ResourceMetaDataPagePerContext', {get: @get, batch: true})
