--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -1,5 +1,5 @@
 :ruby
-  keywords = @get.section_resources.map do |keyword|
+  keywords = @get.section_content.map do |keyword|
     { text: keyword.label, link: keyword.url, count: keyword.usage_count }
   end
 - keywords_content = if keywords.empty? then t(:no_keywords_fallback) else combo('tag-cloud.label', list: keywords) end
