fix: icons and labels

--- a/app/views/my/_section_groups.html.haml
+++ b/app/views/my/_section_groups.html.haml
@@ -1,5 +1,6 @@
 - # Only shown on the dashboard "index"! This is NOT the 'Groups' index!!!
 :ruby
+  binding.pry
   group_types = { # config:
     internal: t(:internal_groups),
     external: t(:external_groups)
