feature: merge login and explore page

--- a/app/assets/stylesheets/views/home.sass
+++ b/app/assets/stylesheets/views/home.sass
@@ -2,7 +2,8 @@
  *  HOME PAGE
  *-----------------------------------------
 
-#app[data-view="application"]
+#app[data-view="application"],
+#app[data-view="explore"]
   #catalog
     .ui-resource
       margin-right: -9px
@@ -28,7 +29,7 @@
   .app-body-ui-container
     margin: 0 auto
     position: relative
-    width: 980px
+    width: 1000px
     // Positioning tab navigation over the collage
     .ui-header-menu
       bottom: 100%
