fix: revert i18n for „batch add to set“ and „batch remove from set“

--- a/app/views/my/_section_media_resources_sync.html.erb
+++ b/app/views/my/_section_media_resources_sync.html.erb
@@ -21,10 +21,6 @@ react(ui_component,
     },
     enableOrdering: true,
     enableOrderByTitle: !is_unpublished_entries,
-    draftsView: section[:id] == :unpublished_entries,
-    collectionData: {
-      addToSetUrl: batch_select_add_to_set_path,
-      removeFromSetUrl: batch_ask_remove_from_set_path
-    })
-
+    draftsView: section[:id] == :unpublished_entries
+)
   %>
