feat: responsive embeds
- make video-embeds responsive
- use same player setup for audio as well
- use iframe-based embeds also internally
- oEmbed API supports XML

--- a/app/assets/stylesheets/_embedded.sass
+++ b/app/assets/stylesheets/_embedded.sass
@@ -1,4 +1,4 @@
-// NOTE: should in be separate from main app, but its not easy to split the bundle
+// NOTE: only for images (old design with tile, part of main style)
 
 body[data-r="media_entries"][data-a="embedded"]
   background: transparent
