--- a/app/assets/stylesheets/video-js-theme.scss
+++ b/app/assets/stylesheets/video-js-theme.scss
@@ -10,43 +10,34 @@
 @import '../../../node_modules/videojs-resolution-switcher/lib/videojs-resolution-switcher';
 //= depend_on_asset '../../../node_modules/videojs-resolution-switcher/lib/videojs-resolution-switcher'
 
-// default sizing:
-.video-js {
-  width: 100%;
-  // height: 150px;
-  // width: 300px;
-
-  &.vjs-fluid {
-    padding-top: 56.25%;  // 16:9 aspect ratio
-  }
-}
 // default fullscreen sizing:
 // see <https://docs.brightcove.com/en/perform/brightcove-player/guides/sizing-the-player.html#fullscreen>
 body.vjs-full-window {
-    padding: 0;
-    margin: 0;
-    height: 100%;
-  }
-  .video-js.vjs-fullscreen {
-    position: fixed;
-    overflow: hidden;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 100% !important;
-    height: 100% !important;
-    max-width: initial !important;
-    max-height: initial !important;
-  }
-  .video-js:-webkit-full-screen {
-    width: 100% !important;
-    height: 100% !important;
-  }
-  .video-js.vjs-fullscreen.vjs-user-inactive {
-    cursor: none;
-  }
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  background: black;
+}
+.video-js.vjs-fullscreen {
+  position: fixed;
+  overflow: hidden;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100% !important;
+  height: 100% !important;
+  max-width: initial !important;
+  max-height: initial !important;
+}
+.video-js:-webkit-full-screen {
+  width: 100% !important;
+  height: 100% !important;
+}
+.video-js.vjs-fullscreen.vjs-user-inactive {
+  cursor: none;
+}
 
 $brand-color: $main-color;
 $contrast-ratio: 12%; // for darker darks
@@ -57,16 +48,18 @@ $controls-opacity: 0.67;
 $primary-foreground-color: #f1f1f1; // #fff default
 
 // can still be seen on all-black video frames, which are common.
-$primary-background-color: darken(#666666, $contrast-ratio);  // #2B333F default
-$main-font-family: "Open Sans", sans-serif;
+$primary-background-color: darken(#666666, $contrast-ratio); // #2B333F default
+$main-font-family: 'Open Sans', sans-serif;
 
-.no-js .video-js .vjs-big-play-button { display: none }
+.no-js .video-js .vjs-big-play-button {
+  display: none;
+}
 
 .video-js {
   /* The base font size controls the size of everything, not just text.
      All dimensions use em-based sizes so that the scale along with the font size.
      Try increasing it to 15px and see what happens. */
-  font-size: 11px;
+  font-size: 12px;
 
   /* The main font color changes the ICON COLORS as well as the text */
   color: $primary-foreground-color;
@@ -75,19 +68,22 @@ $main-font-family: "Open Sans", sans-serif;
 }
 
 // sizing
-$control-bar-height:  3em;
+$control-bar-height: 3em;
 .video-js .vjs-control-bar {
   height: $control-bar-height;
 }
 
+.vjs-poster {
+  background-color: transparent;
+}
+
 .vjs-default-skin .vjs-big-play-button {
-  font-size: 6em;
+  font-size: 17vmin;
 
   //  circular button
-  $big-play-width: 1.67em;
+  $big-play-width: 30vmin;
   $big-play-height: $big-play-width;
   border-radius: $big-play-width;
-
 
   line-height: $big-play-height;
   height: $big-play-height;
@@ -97,15 +93,14 @@ $control-bar-height:  3em;
   border: 0.05em solid $primary-foreground-color;
   background-color: transparentize($primary-foreground-color, 0.67);
 
-  color:  $brand-color;
+  color: $brand-color;
   border-color: $brand-color;
 
   /* Align center */
   left: 50%;
   top: 50%;
   margin-left: -($big-play-width / 2);
-  // margin-top: -($big-play-width / 2);
-  margin-top: -1em;
+  margin-top: -($big-play-width / 2);
 }
 
 .vjs-default-skin:hover .vjs-big-play-button {
@@ -115,9 +110,9 @@ $control-bar-height:  3em;
   // background: transparent;
 
   // like primary btn
-  color:  white;
+  color: white;
   border-color: $brand-color;
-  background-color: $brand-color;
+  background-color: darken($brand-color, 3%);
   background-image: (linear-gradient(lighten($brand-color, 5%), darken($brand-color, 3%)));
 }
 
@@ -130,7 +125,10 @@ $control-bar-height:  3em;
   background-color: $primary-background-color;
   /* Opacity: 1.0 = 100%, 0.0 = 0% */
   background-color: rgba($primary-background-color, $controls-opacity);
-  background-image:  linear-gradient(transparentize(darken(#666, $contrast-ratio), $controls-opacity), transparentize(darken(#4c4c4c, $contrast-ratio), $controls-opacity));
+  background-image: linear-gradient(
+    transparentize(darken(#666, $contrast-ratio), $controls-opacity),
+    transparentize(darken(#4c4c4c, $contrast-ratio), $controls-opacity)
+  );
 }
 
 .vjs-menu {
@@ -138,7 +136,7 @@ $control-bar-height:  3em;
   li.vjs-selected:focus,
   li.vjs-selected:hover {
     background-color: rgba($primary-foreground-color, $controls-opacity);
-    color: #2B333F;
+    color: #2b333f;
   }
 }
 
@@ -178,10 +176,8 @@ $slider-bg-color: lighten($primary-background-color, 33.34%);
   background-color: rgba($slider-bg-color, 0.75);
 }
 
-
 // plugins
 .vjs-resolution-button {
-
   color: inherit;
 
   // .vjs-menu .vjs-menu-content {
@@ -191,12 +187,62 @@ $slider-bg-color: lighten($primary-background-color, 33.34%);
   &,
   // .vjs-resolution-button-label,
   .vjs-menu li {
-  font-family: $main-font-family;
-  font-weight: bold;
+    font-family: $main-font-family;
+    font-weight: bold;
   }
 
   .vjs-resolution-button-label {
-      font-size: 1.34em;
-      line-height: 2.23em;
+    font-size: 1.34em;
+    line-height: 2.23em;
+  }
+}
+
+// fix:
+.vjs-menu-button-popup .vjs-menu {
+  // original styles set a very wide with,
+  // causes layout flicker on menu hover!
+  width: initial;
+}
+
+// // audio variant
+
+// wavesurfer plugin styles:
+
+.vjs-waveform {
+  z-index: 0;
+  position: absolute;
+  bottom: 3em;
+  left: 0;
+  right: 0;
+  top: 0;
+
+  wave,
+  canvas {
+    height: 100% !important;
+  }
+  wave > wave {
+    height: 100% !important;
+  }
+}
+.vjs-control-bar {
+  z-index: 1;
+}
+
+@import '_tmp_icon';
+.video-js.vjs-audio {
+  background-color: $primary-background-color;
+  background-image: url(audioIconSvg(rgba(white, 0.34)));
+  background-size: 30%;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  .vjs-big-play-button {
+    color: white;
+    border-color: $brand-color;
+    background-color: darken($brand-color, 3%);
+    background-image: (linear-gradient(lighten($brand-color, 5%), darken($brand-color, 3%)));
+  }
+  &:hover .vjs-big-play-button {
+    border-color: white;
   }
 }
