--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,7 +8,8 @@
       text: settings.brand_text
     },
     version_name: MADEK_VERSION[:version_name],
-    menu: settings.sitemap
+    menu: settings.sitemap,
+    available_locales: AppSetting.available_locales
   }
 
   modal =
