refactor: remove prop withBox from resources box

--- a/app/views/filter_sets/index.html.haml
+++ b/app/views/filter_sets/index.html.haml
@@ -2,4 +2,4 @@
     icon: component('icon.media-entry'),
     text: 'Sets')
 
-= react('Deco.MediaResourcesBox', get: @get, withBox: true)
+= react('Deco.MediaResourcesBox', get: @get)
