--- a/app/assets/stylesheets/components/_ui-tag-cloud.sass
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.sass
@@ -16,6 +16,9 @@
     margin-bottom: $space-x
     margin-right: $space-x
 
+.ui-tag-cloud-item.block
+  display: block
+
 .ui-tag-button
   background-color: $mono-bright
   +background-image(linear-gradient($white, $mono-bright))
