fix: ui: DatePicker overlay styles
the overlay needs to be "raised", not the whole input – otherwise first picker goes behind the test input of a second one.

--- a/app/assets/stylesheets/components/_ui-datepicker.sass
+++ b/app/assets/stylesheets/components/_ui-datepicker.sass
@@ -3,7 +3,12 @@
 //= depend_on_asset '../../../node_modules/react-day-picker/lib/style'
 
 .ui-datepicker
-  z-index: 1000
+  position: relative
+
+  .ui-datepicker--overlay
+    z-index: 1000
+    width: 100%
+    position: absolute
 
   .DayPicker
     width: 200px
