feat: multiple external uris for keywords and people
for people, decorate known "authority control" links, for example a Library of Congress unique ID for a person.

--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -119,6 +119,9 @@ ul li
   list-style-type: disc
   list-style-position: inside
 
+ul.list-unstyled li
+  list-style: none
+
 ol.inline,
 ui.inline
   margin-bottom: $space-s
