--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -68,6 +68,7 @@
 .ui-autocomplete-disabled
   color: $mono-mid
   font-style: italic
+  pointer-events: none
 
 // Override .ui-autocomplete to make the dropdown as big as needed.
 .ui-autocomplete-open-width
