--- a/app/assets/stylesheets/components/_ui-tag-cloud.sass
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.sass
@@ -63,6 +63,8 @@
     border: 1px solid $mono-light !important
     box-shadow: none !important
     cursor: default
+  &.not-interactive
+    cursor: default
 
 .ui-tag-icon
   color: (darken($mono-light, 5%))
