--- a/app/views/media_entries/new.html.haml
+++ b/app/views/media_entries/new.html.haml
@@ -14,6 +14,10 @@
 
       %h3.title-l= t(:media_entry_media_import_title)
 
+      - if @get.workflow
+        .notice{style: 'padding: 20px; border: 1px solid #ffeeba; background-color: #fff3cd; color: #856404; border-radius: 3px; margin-top: 20px'}
+          Following Media Entries will be added to the main collection of workflow &rarr; #{link_to @get.workflow.name, @get.workflow.actions.dig(:edit, :url), class: 'strong'}
+
       .js-only
         = react('Views.My.Uploader', get: @get)
 
