fix: embedded styles/layout for images
was accidentally broken in https://github.com/Madek/madek-webapp/commit/84d719f8869fb16e6c2a6dbb817b0f6092f904e1

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -163,6 +163,7 @@
 @import previews
 @import uberadmin
 @import markdown
+@import _embedded
 /*-----------------------------------------
  *-----------------------------------------
 
