--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
         href: 'http://madek.zhdk.ch',
         content: component('icon.madek', 'ui-footer-logo')
       },
-      text: settings.brand_text
+      text: localize(settings.brand_texts)
     },
     version_name: MADEK_VERSION[:version_name],
     menu: settings.sitemap,
